Python3: Expose data readers and MeshSeqeuence

--- a/modules/python3/bindings/CMakeLists.txt
+++ b/modules/python3/bindings/CMakeLists.txt
@@ -38,6 +38,7 @@ set(SOURCE_FILES
     src/pycompositeproperties.cpp
     src/pydataformat.cpp
     src/pydatamapper.cpp
+    src/pydatareaders.cpp
     src/pyevent.cpp
     src/pyflags.cpp
     src/pyglmmattypes.cpp
