Volume: Atlas boundary processor added

--- a/modules/volume/CMakeLists.txt
+++ b/modules/volume/CMakeLists.txt
@@ -2,6 +2,7 @@ ivw_module(Volume)
 
 set(HEADER_FILES
     include/inviwo/volume/algorithm/volumemap.h
+    include/inviwo/volume/processors/atlasboundary.h
     include/inviwo/volume/processors/volumeregionmapper.h
     include/inviwo/volume/processors/volumeregionstatistics.h
     include/inviwo/volume/processors/volumevoronoisegmentation.h
@@ -12,6 +13,7 @@ ivw_group("Header Files" ${HEADER_FILES})
 
 set(SOURCE_FILES
     src/algorithm/volumemap.cpp
+    src/processors/atlasboundary.cpp
     src/processors/volumeregionmapper.cpp
     src/processors/volumeregionstatistics.cpp
     src/processors/volumevoronoisegmentation.cpp
