OpenGL: texture sampler objects for GLSL shaders

--- a/modules/opengl/CMakeLists.txt
+++ b/modules/opengl/CMakeLists.txt
@@ -40,6 +40,7 @@ set(HEADER_FILES
     include/modules/opengl/shader/standardshaders.h
     include/modules/opengl/sharedopenglresources.h
     include/modules/opengl/texture/buffertexture.h
+    include/modules/opengl/texture/samplerobject.h
     include/modules/opengl/texture/texture.h
     include/modules/opengl/texture/texture2d.h
     include/modules/opengl/texture/texture2darray.h
@@ -89,6 +90,7 @@ set(SOURCE_FILES
     src/shader/standardshaders.cpp
     src/sharedopenglresources.cpp
     src/texture/buffertexture.cpp
+    src/texture/samplerobject.cpp
     src/texture/texture.cpp
     src/texture/texture2d.cpp
     src/texture/texture2darray.cpp
