--- a/.github/workflows/test-installer.yml
+++ b/.github/workflows/test-installer.yml
@@ -13,12 +13,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-latest, windows-latest]
+        os: [windows-latest] # macos-latest,
         include:
           - os: 'windows-latest'
             installer: 'inviwo-installer-win'
-          - os: 'macos-latest'
-            installer: 'inviwo-installer-macos'
+          #- os: 'macos-latest'
+          #  installer: 'inviwo-installer-macos'
         
     runs-on: ${{ matrix.os }}
     steps:
