--- a/.github/workflows/update-latest-release.yml
+++ b/.github/workflows/update-latest-release.yml
@@ -12,12 +12,12 @@ jobs:
     if: ${{ github.event.workflow_run.conclusion == 'success' && github.ref == 'refs/heads/master'}}
     strategy:
       matrix:
-        os: [macos-latest, windows-latest]
+        os: [windows-latest] # macos-latest,
         include:
           - os: 'windows-latest'
             installer: 'inviwo-installer-win'
-          - os: 'macos-latest'
-            installer: 'inviwo-installer-macos'
+          #- os: 'macos-latest'
+          #  installer: 'inviwo-installer-macos'
     runs-on: ${{ matrix.os }}
     
     steps:
