OpenGL: Sampler objects for gradients.
Work in progress

--- a/modules/opengl/CMakeLists.txt
+++ b/modules/opengl/CMakeLists.txt
@@ -39,6 +39,7 @@ set(HEADER_FILES
     include/modules/opengl/shader/shaderutils.h
     include/modules/opengl/shader/standardshaders.h
     include/modules/opengl/sharedopenglresources.h
+    include/modules/opengl/texture/samplerobject.h
     include/modules/opengl/texture/buffertexture.h
     include/modules/opengl/texture/texture.h
     include/modules/opengl/texture/texture2d.h
@@ -88,6 +89,7 @@ set(SOURCE_FILES
     src/shader/shaderutils.cpp
     src/shader/standardshaders.cpp
     src/sharedopenglresources.cpp
+    src/texture/samplerobject.cpp
     src/texture/buffertexture.cpp
     src/texture/texture.cpp
     src/texture/texture2d.cpp
