--- a/.gitmodules
+++ b/.gitmodules
@@ -15,10 +15,10 @@
     url = https://github.com/nemtrif/utfcpp
 [submodule "ext/benchmark/benchmark"]
     path = ext/benchmark/benchmark
-    url = https://github.com/petersteneteg/benchmark
+    url = https://github.com/google/benchmark.git
 [submodule "ext/gtest/gtest"]
     path = ext/gtest/gtest
-    url = https://github.com/inviwo/googletest.git
+    url = https://github.com/google/googletest.git
 [submodule "modules/glfw/ext/glfw/glfw"]
     path = modules/glfw/ext/glfw/glfw
     url = https://github.com/inviwo/glfw.git
