Core/Various : Remove Usage Mode WIP 3
Added new property selection dialog for the compositeprocessor

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -339,6 +339,7 @@ set(HEADER_FILES
     ${IVW_INCLUDE_DIR}/inviwo/core/util/intersection/raysphereintersection.h
     ${IVW_INCLUDE_DIR}/inviwo/core/util/introspection.h
     ${IVW_INCLUDE_DIR}/inviwo/core/util/inviwosetupinfo.h
+    ${IVW_INCLUDE_DIR}/inviwo/core/util/iterrange.h
     ${IVW_INCLUDE_DIR}/inviwo/core/util/licenseinfo.h
     ${IVW_INCLUDE_DIR}/inviwo/core/util/logcentral.h
     ${IVW_INCLUDE_DIR}/inviwo/core/util/logerrorcounter.h
@@ -679,6 +680,7 @@ set(SOURCE_FILES
     util/indirectiterator.cpp
     util/introspection.cpp
     util/inviwosetupinfo.cpp
+    util/iterrange.cpp
     util/licenseinfo.cpp
     util/logcentral.cpp
     util/logerrorcounter.cpp
