--- a/.github/workflows/inviwo.yml
+++ b/.github/workflows/inviwo.yml
@@ -153,15 +153,18 @@ jobs:
         path: build/docs/python-api/*
 
   test-installer:
+    needs: build
     uses: ./.github/workflows/test-installer.yml
     secrets: inherit
 
   update-api-docs:
-    # if: ${{ github.ref == 'refs/heads/master' }}
+    needs: [build, test-installer]
+    # if: github.ref == 'refs/heads/master'
     uses: ./.github/workflows/update-api-docs.yml
     secrets: inherit
 
   update-latest-release:
-    # if: ${{ github.ref == 'refs/heads/master' }}
+    needs: [build, test-installer]
+    # if: github.ref == 'refs/heads/master'
     uses: ./.github/workflows/update-latest-release.yml
     secrets: inherit
