--- a/.github/workflows/inviwo.yml
+++ b/.github/workflows/inviwo.yml
@@ -118,7 +118,7 @@ jobs:
 
     - name: "Build Changelog"
       id: build_changelog
-      uses: mikepenz/release-changelog-builder-action@{latest-release}
+      uses: mikepenz/release-changelog-builder-action@v3
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
