Tiff: Move release project to ext/tiff folder

--- a/ext/tiff/CMakeLists.txt
+++ b/ext/tiff/CMakeLists.txt
@@ -214,7 +214,8 @@ message(STATUS "")
 #[===[ Inviwo modification ]===]
 ivw_suppress_compiler_warnings(tiff)
 ivw_default_install_targets(tiff)
-ivw_folder(tiff ext)
+ivw_folder(tiff ext/tiff)
+ivw_folder(release ext/tiff)
 source_group("CMake Files" FILES ${CMAKE_CURRENT_SOURCE_DIR}/CMakeLists.txt)
 ivw_make_package(TIFF tiff)
 add_library(TIFF::TIFF ALIAS tiff)
