CMake: switched from Cotire to CMake PCH

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -871,8 +871,45 @@ target_link_libraries(inviwo-core
         utf8::cpp
 )
 
-#Optimize compiliation with PCH etc
-ivw_compile_optimize_on_target(inviwo-core)
+# Core header files used in PCH file
+# These headers where identified by the CompileScore extension in Visual Studio as the ones 
+# where most time is spent on (accumulative).
+set(PCH_HEADERS_CORE
+    ${IVW_INCLUDE_DIR}/inviwo/core/common/inviwoapplication.h
+    ${IVW_INCLUDE_DIR}/inviwo/core/common/inviwomodule.h
+    ${IVW_INCLUDE_DIR}/inviwo/core/datastructures/data.h
+    ${IVW_INCLUDE_DIR}/inviwo/core/datastructures/geometry/mesh.h
+    ${IVW_INCLUDE_DIR}/inviwo/core/datastructures/image/image.h
+    ${IVW_INCLUDE_DIR}/inviwo/core/datastructures/volume/volume.h
+    ${IVW_INCLUDE_DIR}/inviwo/core/io/serialization/deserializer.h
+    ${IVW_INCLUDE_DIR}/inviwo/core/io/serialization/serializebase.h
+    ${IVW_INCLUDE_DIR}/inviwo/core/io/serialization/serializer.h
+    ${IVW_INCLUDE_DIR}/inviwo/core/processors/processor.h
+    ${IVW_INCLUDE_DIR}/inviwo/core/properties/property.h
+    ${IVW_INCLUDE_DIR}/inviwo/core/properties/propertyowner.h
+    ${IVW_INCLUDE_DIR}/inviwo/core/properties/valuewrapper.h
+    ${IVW_INCLUDE_DIR}/inviwo/core/util/document.h
+    ${IVW_INCLUDE_DIR}/inviwo/core/util/exception.h
+    ${IVW_INCLUDE_DIR}/inviwo/core/util/glm.h
+    ${IVW_INCLUDE_DIR}/inviwo/core/util/glmmat.h
+    ${IVW_INCLUDE_DIR}/inviwo/core/util/glmutils.h
+    ${IVW_INCLUDE_DIR}/inviwo/core/util/glmvec.h
+)
+# Standard headers and external header files used in PCH file
+# as identified by CompileScore extension in Visual Studio.
+set(PCH_HEADERS_EXTERNAL
+    <cassert>
+    <cmath>
+    <vector>
+    <string>
+    <string_view>
+    <ostream>
+
+    <glm/detail/setup.hpp>
+    <fmt/format.h>
+)
+
+ivw_compile_optimize_on_target(inviwo-core HEADERS ${PCH_HEADERS_EXTERNAL} ${PCH_HEADERS_CORE})
 
 # Make package (for other projects to find)
 ivw_default_install_targets(inviwo-core)
