--- a/modules/dataframeqt/CMakeLists.txt
+++ b/modules/dataframeqt/CMakeLists.txt
@@ -46,7 +46,7 @@ source_group("MOC Files" FILES ${MOCED_FILES})
 
 # Create module
 ivw_create_module(NO_PCH QT ${SOURCE_FILES} ${MOCED_FILES} ${HEADER_FILES})
-target_link_libraries(inviwo-module-dataframeqt PRIVATE 
+target_link_libraries(inviwo-module-dataframeqt PUBLIC 
     Qt${QT_VERSION_MAJOR}::Core
     Qt${QT_VERSION_MAJOR}::Gui
     Qt${QT_VERSION_MAJOR}::Widgets
